--- a/isabellebuild/index.html
+++ b/isabellebuild/index.html
@@ -3,33 +3,17 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 
 <head><meta http-equiv="Content-Type" content="text/html; charset=utf-8"/><link rel="stylesheet" type="text/css" href="isabelle.css"/>
-<title>Session mucalculus (Isabelle2025)</title>
+<title>Isabelle/Unsorted sessions (Isabelle2025)</title>
 </head>
 
 
 <body>
-<div class="head">
-<h1>Session mucalculus</h1>
+<h1>Isabelle/Unsorted sessions</h1>
 
-<p>View <a href="session_graph.pdf">theory dependencies</a></p>
-</div>
-
-<div class="contents">
-<h2>Theories</h2>
-
-<ul>
-<li><a href="Regular-Sets.Regular_Set.html">Regular-Sets.Regular_Set</a></li>
-
-<li><a href="Regular-Sets.Regular_Exp.html">Regular-Sets.Regular_Exp</a></li>
-
-<li><a href="HOL-Library.Infinite_Set.html">HOL-Library.Infinite_Set</a></li>
-
-<li><a href="HOL-Library.Omega_Words_Fun.html">HOL-Library.Omega_Words_Fun</a></li>
-
-<li><a href="syntaxsemantics.html">syntaxsemantics</a></li>
-
-<li><a href="paths.html">paths</a></li>
-</ul>
+<div class="sessions">
+<dl>
+<dt><a href="mucalculus/index.html">mucalculus</a></dt>
+<dd/></dl>
 </div>
 </body>
 
