--- a/isabellebuild/Unsorted/index.html
+++ b/isabellebuild/Unsorted/index.html
@@ -12,7 +12,7 @@
 
 <div class="sessions">
 <dl>
-<dt><a href="mucalculus/index.html">mucalculus</a></dt>
+<dt><a href="mu_calculus/index.html">mu_calculus</a></dt>
 <dd/></dl>
 </div>
 </body>
