--- a/isabellebuild/Unsorted/mucalculus/index.html
+++ b/isabellebuild/Unsorted/mucalculus/index.html
@@ -3,13 +3,13 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 
 <head><meta http-equiv="Content-Type" content="text/html; charset=utf-8"/><link rel="stylesheet" type="text/css" href="isabelle.css"/>
-<title>Session mucalculus (Isabelle2025)</title>
+<title>Session mu_calculus (Isabelle2025)</title>
 </head>
 
 
 <body>
 <div class="head">
-<h1>Session mucalculus</h1>
+<h1>Session mu_calculus</h1>
 
 <p>View <a href="session_graph.pdf">theory dependencies</a></p>
 </div>
